--- a/data/blog/deriving-ols-estimator.mdx
+++ b/data/blog/deriving-ols-estimator.mdx
@@ -1,7 +1,7 @@
 ---
-title: Deriving the OLS Estimator
-date: '2019-11-16'
-tags: ['next js', 'math', 'ols']
+title: Notas sobre web performance
+date: '2021-10-31'
+tags: ['javascript', 'performance', 'frontend']
 draft: false
 summary: 'How to derive the OLS Estimator with matrix notation and a tour of math typesetting using markdown with the help of KaTeX.'
 ---
