--- a/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introducing Tailwind Nextjs Starter Blog'
-date: '2021-01-12'
+title: 'Aprendiendo a aprender'
+date: '2021-10-20'
 lastmod: '2021-09-08'
 tags: ['next-js', 'tailwind', 'guide']
 draft: false
