change posts description

--- a/data/blog/guide-to-using-images-in-nextjs.mdx
+++ b/data/blog/guide-to-using-images-in-nextjs.mdx
@@ -3,7 +3,7 @@ title: Modelos mentales para leer código
 date: '2021-09-28'
 tags: ['software engineering', 'web development']
 draft: false
-summary: 'In this article we introduce adding images in the tailwind starter blog and the benefits and limitations of the next/image component.'
+summary: 'Como programadores pasamos 80 por ciento del tiempo leyendo y entendiendo código, solo el 20 por ciento escribiendo.'
 authors: ['sparrowhawk']
 ---
 
