--- a/data/blog/new-features-in-v1.mdx
+++ b/data/blog/new-features-in-v1.mdx
@@ -4,7 +4,7 @@ date: 2020-09-13T15:32:14Z
 lastmod: '2021-09-27'
 tags: ['node js', 'web development']
 draft: false
-summary: 'Si estas en los primeros meses del proceso de convertirte en desarrollador web lo primero que tienes que saber es que estas entrando en una carrera en la que nunca vas a dejar de aprender.'
+summary: 'Si estas en los primeros meses del proceso de convertirte en desarrollador web este consejo podría acelerar tu carrera.'
 ---
 
 Si estas en los primeros meses del proceso de convertirte en desarrollador web lo primero que tienes que saber es que estas entrando en una carrera en la que nunca vas a dejar de aprender. Es un camino en el que no hay un destino. Nunca vas a poder decir: ¡He llegado, ya sé y domino todas las herramientas y tecnologías!.
