--- a/data/blog/deriving-ols-estimator.mdx
+++ b/data/blog/deriving-ols-estimator.mdx
@@ -1,9 +1,9 @@
 ---
-title: Notas sobre web performance
+title: Notas sobre optimización web
 date: '2021-10-31'
 tags: ['javascript', 'performance', 'frontend']
 draft: false
-summary: 'How to derive the OLS Estimator with matrix notation and a tour of math typesetting using markdown with the help of KaTeX.'
+summary: 'Como frontend developer es clave conocer las métricas y parámetros para determinar si tu sitio es rápido o lento.'
 ---
 
 # Introduction
