--- a/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
@@ -2,11 +2,10 @@
 title: 'Aprendiendo a aprender'
 date: '2021-10-20'
 lastmod: '2021-09-08'
-tags: ['next-js', 'tailwind', 'guide']
+tags: ['soft skills']
 draft: false
-summary: 'Looking for a performant, out of the box template, with all the best in web technology to support your blogging needs? Checkout the Tailwind Nextjs Starter Blog template.'
+summary: 'Pocas cosas te ayudan mas en la carrera como developer como desarrollar esta meta skill.'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
-authors: ['default', 'sparrowhawk']
 ---
 
 ![tailwind-nextjs-banner](/static/images/twitter-card.png)
