--- a/data/blog/pictures-of-canada.mdx
+++ b/data/blog/pictures-of-canada.mdx
@@ -3,7 +3,7 @@ title: Deconstruyendo React hook useState
 date: '2021-10-05'
 tags: ['React', 'javascript', 'frontend']
 draft: false
-summary: The scenic lands of Canada featuring maple leaves, snow-capped mountains, turquoise lakes and Toronto. Take in the sights in this photo gallery exhibition and see how easy it is to replicate with some MDX magic and tailwind classes.
+summary: En este artículo revisamos el detrás de escenas del hook mas usado en el desarrollo con React.
 ---
 
 # O Canada
