set all posts in draft - true

--- a/data/blog/aprendiendo-a-aprender.mdx
+++ b/data/blog/aprendiendo-a-aprender.mdx
@@ -3,7 +3,7 @@ title: 'Aprendiendo a aprender'
 date: '2021-10-20'
 lastmod: '2021-09-08'
 tags: ['soft skills']
-draft: false
+draft: true
 summary: 'Pocas cosas te ayudan mas en la carrera como developer como desarrollar esta meta skill.'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
 ---
