--- a/data/blog/deconstruyendo-react-hook-usestate.mdx
+++ b/data/blog/deconstruyendo-react-hook-usestate.mdx
@@ -2,7 +2,7 @@
 title: Deconstruyendo React hook useState
 date: '2021-10-05'
 tags: ['React', 'javascript', 'frontend']
-draft: false
+draft: true
 summary: En este artículo revisamos el detrás de escenas del hook mas usado en el desarrollo con React.
 ---
 
