--- a/data/blog/modelos-mentales.mdx
+++ b/data/blog/modelos-mentales.mdx
@@ -2,7 +2,7 @@
 title: Modelos mentales para leer código
 date: '2021-09-28'
 tags: ['software engineering', 'web development']
-draft: false
+draft: true
 summary: 'Como programadores pasamos 80 por ciento del tiempo leyendo y entendiendo código, solo el 20 por ciento escribiendo.'
 ---
 
