--- a/data/blog/notas-sobre-web-performance.mdx
+++ b/data/blog/notas-sobre-web-performance.mdx
@@ -2,7 +2,7 @@
 title: Notas sobre web performance
 date: '2021-10-31'
 tags: ['javascript', 'performance', 'frontend']
-draft: false
+draft: true
 summary: 'Como frontend developer es clave conocer las métricas y parámetros para determinar si tu sitio es rápido o lento.'
 ---
 
