translate blog post from Spanish to English

--- a/data/blog/consejo-ryan-dahl.mdx
+++ b/data/blog/consejo-ryan-dahl.mdx
@@ -3,7 +3,7 @@ title: 'Un gran consejo del creador de Node.js Ryan Dahl'
 date: 2020-09-13T15:32:14Z
 lastmod: '2021-09-27'
 tags: ['node js', 'web development']
-draft: false
+draft: true
 summary: 'Si estas en los primeros meses del proceso de convertirte en desarrollador web este consejo podría acelerar tu carrera.'
 ---
 
